Remove unrelated